fix: Remove static login error message and display based on API response

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-fullstack-mern",
+  "name": "fest-ecommerce-client",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
